Attempt to make jitpack work

--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-js"
     implementation 'kotlin.js.externals:kotlin-js-jquery:3.2.0-0'
 }
+
+task install(dependsOn: build)
