--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.js' version '1.3.50'
+    id 'maven-publish'
 }
 
 group 'com.runt9'
@@ -17,5 +18,3 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-js"
     implementation 'kotlin.js.externals:kotlin-js-jquery:3.2.0-0'
 }
-
-task install(dependsOn: build)
